--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,39 +11,58 @@
 
 <body>
     <header>
-        <a href="#inicio"><img src="img/colegio de contadores de venezuela.png" width="90" alt="" class="im-fig-logo"></a>
+        <a href="#inicio"><img src="img/Peach Green Colorful Watercolor Pastel Web Developer Portfolio Presentation.jpg"
+                width="180px" alt="" class="im-fig-logo"></a>
         <nav>
-            <ul>
-                <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#contacto">Contacto</a></li>
+            <ul id="menu">
+                <li class="menu-item">
+                    <a href="#inicio" class="active">Inicio
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a href="#contacto"> Contacto</a>
+                </li>
             </ul>
-        </nav>     
+        </nav>
     </header>
     <main>
         <section id="inicio">
-            <img src="img/Mi foto.jpg" width="400" alt="" class="foto-perfil">
-            <h1>"Hola, soy Luisa"</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita, delectus numquam qui aperiam harum rem voluptatem a quam ipsa autem inventore ab dignissimos quibusdam ducimus dolores placeat quaerat animi ex.</p>
-        <a href="img/CV.pdf" class="btn">Descargar CV</a>   
+            <img src="img/Foto CV.jpg" alt="" class="foto-perfil">
+            <article class="datos">
+                <h1>Hola! soy Luisa Gamboa</h1>
+                <p>Venezolana, Contador Público actualmente estudio desarrollado web en Frontend, me he comprometido
+                    conmigo misma a
+                    adquirir nuevas habilidades y conocimientos donde pueda proyectarme a otros trabajos y
+                    emprendimientos.</p>
+                <a href="img/Curriculum Luisa.pdf" class="btn">Descargar CV</a>
+            </article>
         </section>
         <section>
-            <article id="contacto">     
-            <h2>Hablemos!</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam facere veritatis rerum natus veniam qui nam modi eius animi porro vel ut voluptas laborum, ad doloremque suscipit nulla ea perspiciatis?</p>
+            <article id="contacto">
+                <article class="contacto">
+                    <h2>Hablemos!</h2>
+                    <p>La experiencia que tengo en Frontend es el conocimiento adquirido en los estudios que actualmente estoy
+                        realizando, he trabajado como contador público registrando las operaciones contables y
+                        realización de los balances de las empresas, me considero una persona de Fé, responsable, con
+                        capacidad de seguir aprendiendo, con actitud
+                        positiva, organizada, integral, proactiva para resolver conflictos y resilente. Entre mis
+                        hobbies está leer,
+                        coser y cocinar.</p>
+                </article>
             </article>
+        </section>
         <section>
             <ul class="iconos">
                 <li><a href="img/mail.png"><img src="img/mail.png" alt=""></a></li>
                 <li><a href="./img/github.png"><img src="img/github.png" alt=""></a></li>
-                <li><a href="./img/linkedin.png"><img src="img/linkedin.png" alt=""></a></li>           
+                <li><a href="./img/linkedin.png"><img src="img/linkedin.png" alt=""></a></li>
             </ul>
         </section>
     </main>
-        <footer>
-            <footer class="footer">
-            <p>Contador Luisa Gamboa</p>
+    <footer>
+        <footer class="footer">
+            <p>Desarrollador Frontend Luisa Gamboa 2023</p>
         </footer>
-    </body>
+        <script src="js/main.js"></script>
+</body>
 </html>
-
-
